tenzir/integration/data/reference/from_to/test_to_failure/step_00.ref
error: unsupported scheme `unknown`
 --> <input>:1:5
  |
1 | to "unknown://failure"
  |     ^^^^^^^ 
  |
  = note: supported schemes for deduction: `file`, `ftp`, `ftps`, `http`, `https`, `udp`
  = docs: https://docs.tenzir.com/tql2/operators/to

error: did not find extension in `failure`
 --> <input>:1:15
  |
1 | to "unknown://failure"
  |               ^^^^^^^ 
  |
  = hint: you can pass a pipeline to handle compression and format